--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -7,6 +7,11 @@ $color-primary: #c9a227;
 $color-primary-light: #f4d03f;
 $color-primary-dark: #8b7355;
 
+// Secondary colors - Mystical purple
+$color-secondary: #7c3aed;
+$color-secondary-light: #a78bfa;
+$color-secondary-dark: #5b21b6;
+
 // Background colors - Deep blue/purple
 $color-bg-dark: #1a1a2e;
 $color-bg-medium: #16213e;
